@@ -4,7 +4,7 @@
 	</description>
 
 	<!-- Project attributes -->
-	<property name="maint_branch" value="5"/>
+	<property name="maint_branch" value="6"/>
 	<property name="export_base" value="minecraft_xray_2.7_mb_${maint_branch}"/>
 	
 	<!-- set global properties for this build -->
